fix: correcoes de bug ao criar templates